@@ -128,3 +128,11 @@ caa.	3600	IN	CAA	\# 70 020461757468303E3039060A2B06010401D6790203010609608648016
 eui48.	3600	IN	EUI48	00-00-5e-90-01-2a
 05657569363400006D000100000E10000800005EEF0000002A
 eui64.	3600	IN	EUI64	00-00-5e-ef-00-00-00-2a
+0474787431000010000100000E100009016102626203636363
+txt1.	3600	IN	TXT	"a" "bb" "ccc"
+0474787432000010000100000E100009016102626203636363
+txt2.	3600	IN	TXT	"a" "bb" "ccc"
+0474787433000010000100000E10001003612062026262062063632063200120
+txt3.	3600	IN	TXT	"a b" "bb" " cc c " " "
+0474787434000010000100000E10001003612062026262062063632063200120
+txt4.	3600	IN	TXT	"a b" "bb" " cc c " " "
